@@ -35,6 +35,8 @@ export (QQ's a zone into a tarball)t
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 tbaMUD 3.59
+[Feb 25 2009] - Jamdog
+  Fixed new medit stats menu so that it uses the the Advanced/Standard cedit toggle
 [Feb 24 2009] - Jamdog
   Bug-Fix: Fixed levels command, so it only shows immortal level if it's in the specified range
   Bug-Fix: write_mobile_espec now saves CON and CHA values for mobiles in world files
